modificando la validacion de los campos en el cliente service